fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ background-size: contain;
 #banner .banner-content { 
   max-width: 100%;  
   position: relative;
-  top: 16%;
+  top: 20%;
 }
 .badge {
   top: 3%;
